Fix hover point label not transitioning correctly on mobile and on safari

--- a/timeweb/timewebapp/static/timewebapp/css/app.css
+++ b/timeweb/timewebapp/static/timewebapp/css/app.css
@@ -789,10 +789,11 @@ main.background-image-exists {
     transition: transform calc(0.1s * clamp(0, var(--animation-speed) * 999, 1)) linear;
 }
 .hover-point-label.hide-label {
-    transform: translate(calc(1px * var(--x)), calc(1px * var(--y))) translate(var(--translatex), -50%) scale(0);
+    transform: translate(calc(1px * var(--x)), calc(1px * var(--y))) translate(var(--translatex), -50%) 
+            scale(0.002); /* for some really odd reason scale(0) break the transition on safari and on mobile */
 }
 .hover-point-label.initial-position {
-    transform: scale(0);
+    transform: scale(0.002);
 }
 .hover-point-label.move-left {
     --translatex: calc(-100% - 10px);
